25/10/2000      Version 1.6.3 Further mods for seqed files.
                              Rewrite of profile core routines.
                              Added %id, %sim and fasta output to
                              NEEDLE and WATER
23/10/2000	Version 1.6.2 Now reads GCG seqed mangled files. Phylip
                              output fixed. Numerous minor changes.
11/10/2000      Version 1.6.1 RedHat Linux 7.0 fpos_t fix
06/10/2000      Version 1.6.0 Addition of CONS application
03/10/2000      Version 1.5.6 URL access handles new SRS6.07* format.
                              Library and applications leak-free.
                              Error messages made less daunting.
28/09/2000      Version 1.5.5 dbigcg changes for genbank. Memory leaks plugged.
23/09/2000      Version 1.5.4 Added blast multi-volume support. More gui.
18/09/2000      Version 1.5.3 LinuxPPC support added
15/09/2000      Version 1.5.2 dbigcg changes for embl
09/09/2000      Version 1.5.1 Changes to graphics data output for GUIs
07/09/2000      Version 1.5.0 EMOWSE added
03/09/2000      Version 1.4.3 TFM corrected. HTML corrected. More GUI work
29/08/2000      Version 1.4.2 Changes to graphics data output for GUIs
25/08/2000      Version 1.4.1 Minor library changes
20/08/2000      Version 1.4.0 SILENT plus RESTRICT additions
18/08/2000      Version 1.3.1 Indexing filenamelen fix + diffseq mod
17/08/2000      Version 1.3.0 Addition of VECTORSTRIP and DIFFSEQ
15/08/2000      Version 1.2.0 released
09/08/2000      Version 1.1.0 released
08/08/2000      Version 1.0.2 released
07/2000		Version 1.0.0 released
12/1998		Version 0.0.4 released
