@@ -6,7 +6,7 @@ dnl Process this file with autoconf to produce a configure script.
 #CC=cc
 
 AC_INIT(ajax/ajacd.c)
-AM_INIT_AUTOMAKE(EMBOSS, 1.6.3)
+AM_INIT_AUTOMAKE(EMBOSS, 1.7.0)
 
 dnl Use libtool to make a shared library.
 AM_PROG_LIBTOOL
