@@ -11,7 +11,7 @@
 # pmr 22-apr-98
 
 appl: seqretsplit [
-	doc: "Reads and writes (returns) sequences"
+	doc: "Reads and writes (returns) sequences in individual files"
 	groups: "reformatting, sequence display, database: entry extraction"
 ]
 
