@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.1.1.1 2000/10/24 22:43:29 ableasby Exp $
+# $Id: mkinstalldirs,v 1.1.1.1 2000/10/31 15:42:26 ableasby Exp $
 
 errstatus=0
 
