@@ -1,3 +1,6 @@
+31/10/2000      Version 1.7.0 ENTRET added. GCG osf style changed.
+                              Fixed -slower & -supper for multiple
+                              sequences
 25/10/2000      Version 1.6.3 Further mods for seqed files.
                               Rewrite of profile core routines.
                               Added %id, %sim and fasta output to
